--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Testing Node using Circle 2 workflows",
   "main": "index.js",
   "scripts": {
+    "start": "node -e 'require(\"./index\").listen(8081)'",
     "test": "NODE_ENV=test node node_modules/jest-cli/bin/jest.js",
     "lint": "node node_modules/eslint/bin/eslint.js --ext=js ."
   },
