--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "node-circle",
   "version": "1.0.0",
   "description": "Testing Node using Circle 2 workflows",
-  "main": "index.js",
+  "bin": "server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node -e 'require(\"./index\").listen(8081)'",
+    "start": "node server.js",
     "test": "NODE_ENV=test node node_modules/jest-cli/bin/jest.js",
     "lint": "node node_modules/eslint/bin/eslint.js --ext=js ."
   },
