--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run: ./.circleci/generate_configuration.sh
+      - run: eb use $APPLICATION_ENVIRONMENT
       - run: eb deploy --timeout 45
 
 workflows:
