--- a/.elasticbeanstalk/development.cfg.yml
+++ b/.elasticbeanstalk/development.cfg.yml
@@ -1,17 +1,13 @@
-branch-defaults:
-  master:
-    environment: null
 global:
   application_name: $APPLICATION_NAME
-  branch: null
   default_ec2_keyname: $EC2_KEYNAME
-  default_platform: Node.js
+  default_platform: arn:aws:elasticbeanstalk:ca-central-1::platform/Docker running
+    on 64bit Amazon Linux/2.7.2
   default_region: ca-central-1
   include_git_submodules: true
   instance_profile: null
   platform_name: null
   platform_version: null
   profile: eb-cli
-  repository: null
   sc: git
   workspace_type: Application
